//proxy/ptunnel:go_default_test: tagged no-presubmit (#840)
//proxy/ptunnel:go_default_test: tagged no-presubmit

This presubmit-gating test appears broken in top of tree.  It fails both using
local-cache and buildbarn profiles, when run on build-04.sea.

Error message:

```
--- FAIL: TestTunnelTypeForHost (0.00s)
    --- FAIL: TestTunnelTypeForHost/error_for_non-existent_URL (0.00s)
        tunnel_test.go:223: got no error; want error containing "no such host"
FAIL
```

Tested: presubmit tests now pass with this tag set.

--- a/proxy/ptunnel/BUILD.bazel
+++ b/proxy/ptunnel/BUILD.bazel
@@ -30,6 +30,8 @@ go_test(
         # Test starts up a server on localhost, which may not be permitted on
         # remote workers.
         "no-remote-exec",
+        # Test also fails when executed locally.
+        "no-presubmit",  # TODO(ccontavalli): fix and re-enable
     ],
     deps = [
         "//lib/errdiff",
