--- a/gee/test.gee.rc
+++ b/gee/test.gee.rc
@@ -3,7 +3,7 @@ git = "git"
 gh = "gh"
 editor = "vim"
 pager = "less"
-gee_dir = "/home/jonathan/test_gee.1540510"
+gee_dir = "/home/jonathan/test_gee.foo"
 ghuser = "jonathan-enf"
 path = [ "/usr/enfabrica/bin", "/enf_mounts/bin", "$HOME/bin", "/usr/bin",]
 ssh_key = "$HOME/.ssh/id_ed25519"
