--- a/bazel/astore/tests/BUILD.bazel
+++ b/bazel/astore/tests/BUILD.bazel
@@ -13,9 +13,10 @@ astore_upload(
     visibility = [
         "//developer:__subpackages__",
     ],
+    upload_tag = "//bazel/astore/tests"
 )
 
-UID_TESTDATA_TXT = "wg36keugs3w6eexzg8azrnuspoqcrbnn"
+UID_TESTDATA_TXT = "i8o3rkarrqgf4ekprz2gdih2eymxsoa4"
 
 SHA_TESTDATA_TXT = "20f565a43697b7804d6a9d7ad4929118a1ed660183dda18229a92fc71c449725"
 
