astore: Print warnings to stderr
This change ensures that `astore` subcommands print warnings to stderr
by using the logger present on the root subcommand.

This should remove most `fmt.Printf`s from the astore subcommands; the
only ones remaining are:
* ones printing formatted output to stdout
* ones in the `guess` subcommand, which don't (yet) use a formatter.

Tested:

Jira: INFRA-11623

--- a/bazel/astore/tests/BUILD.bazel
+++ b/bazel/astore/tests/BUILD.bazel
@@ -10,10 +10,10 @@ astore_upload(
         "testdata.txt",
     ],
     uidfile = "BUILD.bazel",
+    upload_tag = "//bazel/astore/tests",
     visibility = [
         "//developer:__subpackages__",
     ],
-    upload_tag = "//bazel/astore/tests"
 )
 
 UID_TESTDATA_TXT = "i8o3rkarrqgf4ekprz2gdih2eymxsoa4"
