--- a/.bazelrc
+++ b/.bazelrc
@@ -5,6 +5,7 @@
 # The full list of Bazel options: https://docs.bazel.build/versions/master/command-line-reference.html
 common --repo_env=CC=gcc-10 --repo_env=CPP=g++-10 --repo_env=CXX=g++-10
 build --cxxopt="-std=c++20"  --host_cxxopt="-std=c++20" --client_env=BAZEL_CXXOPTS=-std=c++20
+build --host_cxxopt="-Wno-sign-compare" --host_cxxopt="-Wno-deprecated"
 
 build --workspace_status_command "/bin/bash bazel/workspace_status.sh"
 
