astore: Implement token URL parameter validation
This change implements token-based validation, as described in the [CX
Portal Artifact Connector API design
doc](https://docs.google.com/document/d/1Apvbt3LNpoLdUFtRliKZ8Ety-nXYCGNjfgSU2mde1o0/edit?tab=t.0#bookmark=id.7i6q2xwekj8q).

This involves:

* adding a flag `--token-public-key-file` that contains a public key
  that can be used to validate JWTs
* reading and parsing this file on startup and storing the resulting
  public key object inside `Server.options`
* adding a new route `/gt/`, which is similar to the `/g/` download
  route, except:
  * it is not protected by Oauth authentication
  * it enforces token-based authentication based on a URL parameter
* unit tests are added for the token validation code, to ensure that the
  proper token checks are in-place before allowing a download

Tested:
* added unit tests
* TODO: deploy to staging and manually test

Jira: REL-178

--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "note.go",
         "publish.go",
         "retrieve.go",
+        "token.go",
     ],
     importpath = "github.com/enfabrica/enkit/astore/server/astore",
     visibility = ["//visibility:public"],
@@ -19,6 +20,7 @@ go_library(
         "//lib/logger",
         "//lib/oauth",
         "//lib/retry",
+        "@com_github_golang_jwt_jwt_v5//:jwt",
         "@com_google_cloud_go_datastore//:datastore",
         "@com_google_cloud_go_storage//:storage",
         "@org_golang_google_api//iterator",
@@ -34,6 +36,7 @@ go_test(
     srcs = [
         "astore_test.go",
         "retrieve_test.go",
+        "token_test.go",
         "util_test.go",
     ],
     data = glob(["testdata/**"]),
@@ -44,9 +47,11 @@ go_test(
         "//astore/rpc/astore",
         "//lib/errdiff",
         "//lib/testutil",
+        "@com_github_golang_jwt_jwt_v5//:jwt",
         "@com_github_golang_protobuf//ptypes/wrappers",
         "@com_github_prashantv_gostub//:gostub",
         "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//require",
         "@com_google_cloud_go_datastore//:datastore",
         "@com_google_cloud_go_storage//:storage",
         "@org_golang_google_genproto//googleapis/datastore/v1:datastore",
