--- a/astore/BUILD.bazel
+++ b/astore/BUILD.bazel
@@ -26,7 +26,10 @@ go_test(
         "//lib/progress",
         "//lib/srand",
         "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//require",
+        "@io_bazel_rules_go//go/runfiles:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//credentials/insecure",
         "@org_golang_google_grpc//test/bufconn",
     ],
 )
