feat(astore_upload): add option to print uploaded file and uid to stdout
In the release pipeline we need a way to capture file name and its uid
so we can notifiy users and, optionally, save file:uid mapping
somewhere.

JIRA: REL-77

Co-authored-by: Scott Minor <scott@enfabrica.net>

--- a/f/astore/BUILD.bazel
+++ b/f/astore/BUILD.bazel
@@ -1,7 +1,13 @@
-load("//bazel/astore:defs.bzl", "astore_tag")
+load("//bazel/astore:defs.bzl", "astore_output_format", "astore_tag")
 
 astore_tag(
     name = "upload_tag",
     build_setting_default = [],
+    visibility = ["//bazel/astore:__pkg__"],
+)
+
+astore_output_format(
+    name = "output_format",
+    build_setting_default = "table",
     visibility = ["//bazel/astore:__pkg__"],
 )
