Add @paul-enf to CODEOWNERS for /allocation_manager

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 /* @ccontavalli @mhallmark @jrp-enf
 *.sh @jonathan-enf @ccontavalli @ahungrynacho @mhallmark
 /scripts @jonathan-enf @ccontavalli @mhallmark
-allocation_manager/ @kjw-enf @ccontavalli @moksh-enf @roivanov
+allocation_manager/ @ccontavalli @kjw-enf @moksh-enf @paul-enf @roivanov
