ENGPROD-1153: Bugfixes to affected targets detection (#1211)
What's done in this PR:
- workspace events mechanism was broken, could be after Bazel 7
migration, now all functional in `workspace_events.go`
- added Bazel's `--repository_cache` usage, for two queries from nearby
git points it can speed up process a lot
- After subsequent `bazel query
--experimental_workspace_rules_log_file=<> dep(//...)` invocations,
workspace log gets regenerated with only diff workspace events. If no
changes in workspaces between runs, workspace log could be empty. So,
added `start_workspace_log` and `end_workspace_log` arguments. These
helps a lot during debug to reuse pre-generated workspace logs files.
- some third party repositories do not tracked with our workspace logs
traversing mechanic. For these repositories fallback to parsing all rule
targets. But as optimization, calculate only source files size and not
hashes.
- and other minor bug fixes

--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "query.go",
         "target.go",
         "workspace.go",
+        "workspace_events.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/bazel",
     visibility = ["//visibility:public"],
@@ -21,6 +22,7 @@ go_library(
         "//lib/multierror",
         "//lib/proto/delimited",
         "@com_github_bazelbuild_buildtools//wspace",
+        "@org_golang_google_protobuf//encoding/protojson",
         "@org_golang_google_protobuf//proto",
     ],
 )
