--- a/bazel/astore/BUILD.bazel
+++ b/bazel/astore/BUILD.bazel
@@ -16,8 +16,12 @@ exports_files([
 py_binary(
     name = "astore_upload_files",
     srcs = ["astore_upload_files.py"],
+    data = [
+        "@net_enfabrica_binary_astore//file",
+    ],
     main = "astore_upload_files.py",
     deps = [
+        "@rules_python//python/runfiles",
         requirement("absl-py"),
     ],
 )
