--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -84,10 +84,8 @@ python.toolchain(
     python_version = "3.12",
 )
 
-use_repo(python)
-
 pip = use_extension(
-    "@rules_python//python/extensions:pip.bzl", 
+    "@rules_python//python/extensions:pip.bzl",
     "pip",
     dev_dependency = True,
 )
@@ -108,10 +106,10 @@ use_repo(pip, "enkit_pip_deps")
 bazel_dep(name = "protobuf", version = "31.0")
 single_version_override(
     module_name = "protobuf",
-    version = "31.0",
     patches = [
         "//bazel/dependencies/protobuf:0001-fix-protobuf-query-errors.patch",
     ],
+    version = "31.0",
 )
 
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
@@ -215,6 +213,12 @@ go_deps.module_override(
         "//bazel/dependencies/com_github_cloudflare_circl:0001-fix-headers-imports.patch",
     ],
     path = "github.com/cloudflare/circl",
+)
+go_deps.module_override(
+    patches = [
+        "//bazel/dependencies/com_google_cloud_go_datastore:0001-datastore-query-to-proto-exported.patch",
+    ],
+    path = "cloud.google.com/go/datastore",
 )
 
 inject_repo(
