--- a/experimental/remote_apis_build_demo/BUILD.bazel
+++ b/experimental/remote_apis_build_demo/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/experimental/remote_apis_build_demo",
     visibility = ["//visibility:private"],
     deps = [
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_buildbarn_bb_remote_execution//pkg/credentials",
         "@com_github_buildbarn_bb_storage//pkg/digest",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
