--- a/lib/client/commands/BUILD.bazel
+++ b/lib/client/commands/BUILD.bazel
@@ -20,7 +20,7 @@ go_library(
         "//lib/kflags",
         "//lib/kflags/kcobra",
         "//lib/retry",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_spf13_cobra//:cobra",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//grpclog",
