astore: URL fetch with UID+path sets empty TagSet on Retrieve
This change ensures that when a URL-based download is happening by UID
that an empty TagSet gets put on the `RetrieveRequest`, to avoid the
default behavior of a `latest` tag filter being applied.

Tested: TODO

Jira: REL-240

--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -51,6 +51,7 @@ go_test(
         "@com_github_golang_protobuf//ptypes/wrappers",
         "@com_github_prashantv_gostub//:gostub",
         "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//mock",
         "@com_github_stretchr_testify//require",
         "@com_google_cloud_go_datastore//:datastore",
         "@com_google_cloud_go_storage//:storage",
