--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -138,6 +138,7 @@ use_repo(
     "com_github_fatih_color",
     "com_github_go_git_go_git_v5",
     "com_github_golang_glog",
+    "com_github_golang_jwt_jwt_v5",
     "com_github_golang_protobuf",
     "com_github_google_go_cmp",
     "com_github_google_go_github",
