ENGPROD-1194: setup registry inside enkit repo

--- a/.bazelrc
+++ b/.bazelrc
@@ -31,3 +31,6 @@ try-import %workspace%/.bazelrc.user
 # https://github.com/bazel-contrib/rules_oci/blob/main/docs/pull.md#authentication-using-credential-helpers
 common --credential_helper=us-docker.pkg.dev=%workspace%/tools/artifact_registry_auth.sh
 common --repo_env=OCI_GET_TOKEN_ALLOW_FAIL=1
+
+common --registry="file://%workspace%/registry"
+common --registry=https://bcr.bazel.build
