--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,7 +29,11 @@ bazel_dep(
     dev_dependency = True,
 )
 
-toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
+toolchains = use_extension(
+    "@hermetic_cc_toolchain//toolchain:ext.bzl",
+    "toolchains",
+    dev_dependency = True,
+)
 use_repo(toolchains, "zig_sdk")
 
 register_toolchains(
@@ -38,6 +42,7 @@ register_toolchains(
     "@zig_sdk//toolchain:darwin_amd64",
     "@zig_sdk//toolchain:darwin_arm64",
     "@zig_sdk//toolchain:linux_arm64_musl",
+    dev_dependency = True,
 )
 
 bazel_dep(name = "rules_pkg", version = "1.1.0")
@@ -48,15 +53,7 @@ bazel_dep(name = "google_benchmark", version = "1.9.2")
 bazel_dep(name = "rules_jsonnet", version = "0.6.0")
 bazel_dep(name = "rules_oci", version = "2.2.6")
 bazel_dep(name = "xds", version = "0.0.0-20240423-555b57e")
-bazel_dep(name = "cel-spec", version = "0.23.0")
-single_version_override(
-    module_name = "cel-spec",
-    patches = [
-        "//bazel/dependencies/cel_spec:fix_linkage_problems.patch",
-    ],
-    version = "0.23.0",
-)
-
+bazel_dep(name = "cel-spec", version = "enf-0.23.0")
 bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")
 bazel_dep(name = "rules_proto_grpc_go", version = "5.1.0")
 
@@ -111,20 +108,12 @@ pip.parse(
 )
 use_repo(pip, "enkit_pip_deps")
 
-bazel_dep(name = "protobuf", version = "31.0")
-single_version_override(
-    module_name = "protobuf",
-    patches = [
-        "//bazel/dependencies/protobuf:0001-fix-protobuf-query-errors.patch",
-    ],
-    version = "31.0",
-)
-
+bazel_dep(name = "protobuf", version = "enf-31.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
 bazel_dep(name = "rules_go", version = "0.54.1")
-bazel_dep(name = "gazelle", version = "0.43.0")
+bazel_dep(name = "gazelle", version = "enf-0.43.0")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.24.0")
@@ -204,30 +193,6 @@ use_repo(
     "org_golang_x_term",
     "org_uber_go_goleak",
     "org_uber_go_zap",
-)
-go_deps.module_override(
-    patches = [
-        "//bazel/dependencies/org_golang_google_grpc:0001-xds-imports-fix.patch",
-    ],
-    path = "google.golang.org/grpc",
-)
-go_deps.module_override(
-    patches = [
-        "//bazel/dependencies/com_github_envoyproxy_go_control_plane_envoy:0001-xds-imports-fix.patch",
-    ],
-    path = "github.com/envoyproxy/go-control-plane/envoy",
-)
-go_deps.module_override(
-    patches = [
-        "//bazel/dependencies/com_github_cloudflare_circl:0001-fix-headers-imports.patch",
-    ],
-    path = "github.com/cloudflare/circl",
-)
-go_deps.module_override(
-    patches = [
-        "//bazel/dependencies/com_google_cloud_go_datastore:0001-datastore-query-to-proto-exported.patch",
-    ],
-    path = "cloud.google.com/go/datastore",
 )
 
 inject_repo(
