--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -92,7 +92,7 @@ pip.parse(
 )
 use_repo(pip, "enkit_pip_deps")
 
-bazel_dep(name = "aspect_rules_py", version = "1.5.1")
+bazel_dep(name = "aspect_rules_py", version = "enf-1.5.1")
 
 bazel_dep(name = "protobuf", version = "enf-31.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
