--- a/bazel/linux/kunit/BUILD.bazel
+++ b/bazel/linux/kunit/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@aspect_rules_py//py:defs.bzl", "py_library", "py_binary")
+load("@aspect_rules_py//py:defs.bzl", "py_library", "py_binary", "py_pex_binary")
 
 py_binary(
     name = "kunit",
@@ -41,9 +41,12 @@ py_library(
     srcs = ["kunit_config.py"],
 )
 
-filegroup(
+py_pex_binary(
     name = "kunit_zip",
-    srcs = [":kunit"],
-    output_group = "python_zip_file",
+    binary = ":kunit",
+    python_interpreter_constraints = [
+        "CPython=={major}.{minor}.*",
+        "CPython==3.8.*",
+    ],
     visibility = ["//visibility:public"],
 )
