astore: Error when token not present in requests to `/gt` endpoint
The `/gt` astore URL endpoint performs authentication via a token in the
request parameters, but currently allows access when the token is
completely missing. This change causes an error to be returned instead,
so that we don't allow unauthenticated access to astore artifacts.

Tested: added unit test

Jira: REL-272

--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -46,6 +46,7 @@ go_test(
         "//astore/client/astore",
         "//astore/rpc/astore",
         "//lib/errdiff",
+        "//lib/logger",
         "//lib/testutil",
         "@com_github_golang_jwt_jwt_v5//:jwt",
         "@com_github_golang_protobuf//ptypes/wrappers",
