--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -101,7 +101,11 @@ bazel_dep(name = "jsonnet_go", version = "0.21.0")
 bazel_dep(name = "rules_go", version = "0.54.1")
 bazel_dep(name = "gazelle", version = "enf-0.43.0")
 
-go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
+go_sdk = use_extension(
+    "@rules_go//go:extensions.bzl", 
+    "go_sdk",
+    dev_dependency = True,
+)
 go_sdk.download(version = "1.24.0")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
