[WIP] Encapsulate request info and topologies
- Add protobufs for host info, gpu info, and cpu info
- Add Go structs accordingly
- Add support for host inventory file (generated by hand/crond elsewhere)
- Update matchmaking and service init for new data structs

--- a/allocation_manager/server/BUILD.bazel
+++ b/allocation_manager/server/BUILD.bazel
@@ -10,8 +10,8 @@ go_library(
     deps = [
         "//allocation_manager/proto",
         "//allocation_manager/service",
-        "//allocation_manager/topology",
         "//lib/server",
+        "//lib/logger",
         "@com_github_prometheus_client_golang//prometheus/promhttp",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext",
