--- a/registry/modules/rules_foreign_cc/enf-0.14.0/MODULE.bazel
+++ b/registry/modules/rules_foreign_cc/enf-0.14.0/MODULE.bazel
@@ -26,15 +26,15 @@ tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
 use_repo(
     tools,
     "cmake_3.23.2_toolchains",
-    "cmake_src",
-    "gettext_runtime",
-    "glib_dev",
-    "glib_src",
-    "gnumake_src",
+    # "cmake_src",
+    # "gettext_runtime",
+    # "glib_dev",
+    # "glib_src",
+    # "gnumake_src",
     "meson_src",
     "ninja_1.12.1_toolchains",
-    "ninja_build_src",
-    "pkgconfig_src",
+    # "ninja_build_src",
+    # "pkgconfig_src",
     "rules_foreign_cc_framework_toolchains",
 )
 
@@ -42,6 +42,7 @@ register_toolchains(
     "@rules_foreign_cc_framework_toolchains//:all",
     "@cmake_3.23.2_toolchains//:all",
     "@ninja_1.12.1_toolchains//:all",
+    
     "@python_3_12//:all",
     "@rules_foreign_cc//toolchains:all",
 )
