--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,7 +9,7 @@ bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
 bazel_dep(name = "rules_cc", version = "0.1.1")
 bazel_dep(name = "rules_multirun", version = "0.12.0")
-bazel_dep(name = "bazel_bats", version = "0.35.0")
+bazel_dep(name = "bazel_bats", version = "enf-0.35.0")
 bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")
 
 bazel_dep(
