--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -93,7 +93,6 @@ pip.parse(
 use_repo(pip, "enkit_pip_deps")
 
 bazel_dep(name = "aspect_rules_py", version = "enf-1.5.1")
-
 bazel_dep(name = "protobuf", version = "enf-31.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
@@ -102,7 +101,7 @@ bazel_dep(name = "rules_go", version = "0.54.1")
 bazel_dep(name = "gazelle", version = "enf-0.43.0")
 
 go_sdk = use_extension(
-    "@rules_go//go:extensions.bzl", 
+    "@rules_go//go:extensions.bzl",
     "go_sdk",
     dev_dependency = True,
 )
@@ -183,6 +182,9 @@ use_repo(
     "org_golang_x_term",
     "org_uber_go_goleak",
     "org_uber_go_zap",
+)
+go_deps.config(
+    check_direct_dependencies = "off",
 )
 
 inject_repo(
