--- a/registry/modules/dropbear/enf-2024.86/overlay/BUILD.bazel
+++ b/registry/modules/dropbear/enf-2024.86/overlay/BUILD.bazel
@@ -1,10 +1,13 @@
 load("@rules_foreign_cc//foreign_cc:configure.bzl", "configure_make")
 
-filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])
+filegroup(
+    name = "all",
+    srcs = glob(["**"]),
+    visibility = ["//visibility:public"],
+)
 
 configure_make(
     name = "binaries",
-    lib_source = ":all",
     configure_options = [
         "--disable-lastlog",
         "--disable-utmp",
@@ -20,6 +23,15 @@ configure_make(
         ],
         "//conditions:default": [],
     }),
+    lib_source = ":all",
+    out_binaries = [
+        "dropbear",
+        "dropbearkey",
+    ],
+    postfix_script = "; ".join([
+        "mkdir -p ${INSTALLDIR}/bin",
+        "cp dropbear dropbearkey ${INSTALLDIR}/bin",
+    ]),
     # By default `targets` would be ["", "install"], meaning it would run
     # `make ""` and `make "install"`.
     #
@@ -28,16 +40,8 @@ configure_make(
     # Instead, run the few commands in postfix_script to install the
     # binaries correctly.
     targets = [""],
-    postfix_script = "; ".join([
-        "mkdir -p ${INSTALLDIR}/bin",
-        "cp dropbear dropbearkey ${INSTALLDIR}/bin",
-    ]),
-    out_binaries = [
-        "dropbear",
-        "dropbearkey",
-    ],
     visibility = ["//visibility:public"],
     deps = [
-        "@zlib//:zlib",
+        "@zlib",
     ],
 )
