--- a/registry/modules/dropbear/enf-2024.86/overlay/MODULE.bazel
+++ b/registry/modules/dropbear/enf-2024.86/overlay/MODULE.bazel
@@ -1,4 +1,7 @@
-module(name = "dropbear", version="enf-2024.86")
+module(
+    name = "dropbear",
+    version = "enf-2024.86",
+)
 
 bazel_dep(name = "platforms", version = "0.0.11")
 bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
