--- a/scripts/BUILD.bazel
+++ b/scripts/BUILD.bazel
@@ -1,7 +1,7 @@
-load("@//bazel:shellutils.bzl", "shellcheck_test")
-load("@//bazel/astore:defs.bzl", "astore_upload")
-load("@//bazel/utils:diff_test.bzl", "diff_test")
 load("@bazel_bats//:rules.bzl", "bats_test")
+load("//bazel:shellutils.bzl", "shellcheck_test")
+load("//bazel/astore:defs.bzl", "astore_upload")
+load("//bazel/utils:diff_test.bzl", "diff_test")
 
 sh_library(
     name = "gee-lib",
