--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,7 +5,8 @@ module(
 )
 
 bazel_dep(name = "platforms", version = "0.0.11")
-bazel_dep(name = "bazel_skylib", version = "1.7.1")
+bazel_dep(name = "stardoc", version = "0.8.0")
+bazel_dep(name = "bazel_skylib", version = "1.8.0")
 bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
 bazel_dep(name = "rules_cc", version = "0.1.1")
 bazel_dep(name = "rules_multirun", version = "0.12.0")
@@ -39,9 +40,9 @@ bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "grpc", version = "1.72.0")
 bazel_dep(name = "googletest", version = "1.17.0")
 bazel_dep(name = "google_benchmark", version = "1.9.2")
-bazel_dep(name = "rules_jsonnet", version = "0.6.0")
+bazel_dep(name = "rules_jsonnet", version = "0.7.2")
 bazel_dep(name = "rules_oci", version = "2.2.6")
-bazel_dep(name = "xds", version = "0.0.0-20240423-555b57e")
+bazel_dep(name = "xds", version = "enf-2025-05-01")
 bazel_dep(name = "cel-spec", version = "enf-0.23.0")
 bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")
 bazel_dep(name = "rules_proto_grpc_go", version = "5.1.0")
@@ -97,18 +98,24 @@ bazel_dep(name = "protobuf", version = "enf-31.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
-bazel_dep(name = "rules_go", version = "0.54.1")
-bazel_dep(name = "gazelle", version = "enf-0.43.0")
+bazel_dep(name = "rules_go", version = "0.55.1")
+bazel_dep(name = "gazelle", version = "enf-0.44.0")
 
 go_sdk = use_extension(
     "@rules_go//go:extensions.bzl",
     "go_sdk",
     dev_dependency = True,
 )
-go_sdk.download(version = "1.24.0")
+go_sdk.download(version = "1.24.4")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
+go_deps.gazelle_override(
+    directives = [
+        "gazelle:proto disable",
+    ],
+    path = "github.com/hashicorp/nomad",
+)
 use_repo(
     go_deps,
     "com_github_bazelbuild_buildtools",
@@ -169,7 +176,6 @@ use_repo(
     "com_google_cloud_go_storage",
     "in_gopkg_gomail_v2",
     "in_gopkg_yaml_v2",
-    "in_gopkg_yaml_v3",
     "org_golang_google_api",
     "org_golang_google_genproto",
     "org_golang_google_genproto_googleapis_bytestream",
