--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -44,7 +44,10 @@ go_binary(
 # Generate a .go file containing all the credentials supplied during the build.
 go_embed_data(
     name = "embedded-credentials",
-    srcs = glob(["credentials/**/*.flag*"]),
+    srcs = glob(
+        ["credentials/**/*.flag*"],
+        allow_empty = True,
+    ),
     flatten = True,
     package = "credentials",
     visibility = ["//visibility:public"],
@@ -60,7 +63,10 @@ go_library(
 # Generate a .go file containing all the web assets.
 go_embed_data(
     name = "embedded-assets",
-    srcs = ["//auth/server/assets:css"] + glob(["assets/**"]),
+    srcs = ["//auth/server/assets:css"] + glob(
+        ["assets/**"],
+        allow_empty = True,
+    ),
     flatten = True,
     package = "assets",
     visibility = ["//visibility:public"],
