--- a/auth/server/credentials/BUILD.bazel
+++ b/auth/server/credentials/BUILD.bazel
@@ -4,7 +4,10 @@ load("//bazel/go_extras:embed_data.bzl", "go_embed_data")
 # Generate a .go file containing all the credentials supplied during the build.
 go_embed_data(
     name = "embedded-credentials",
-    srcs = glob(["**/*.flag*"]),
+    srcs = glob(
+        ["**/*.flag*"],
+        allow_empty = True,
+    ),
     flatten = True,
     package = "credentials",
     visibility = ["//visibility:public"],
