--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -31,7 +31,10 @@ go_library(
 # Generate a .go file containing all the flags supplied during the build.
 go_embed_data(
     name = "embedded-flags",
-    srcs = glob(["flags/**/*.flag*"]),
+    srcs = glob(
+        ["flags/**/*.flag*"],
+        allow_empty = True,
+    ),
     flatten = True,
     package = "flags",
     visibility = ["//visibility:public"],
@@ -47,7 +50,10 @@ go_library(
 # Generate a .go file containing all the web assets.
 go_embed_data(
     name = "embedded-assets",
-    srcs = glob(["assets/**"]),
+    srcs = glob(
+        ["assets/**"],
+        allow_empty = True,
+    ),
     flatten = True,
     package = "assets",
     visibility = ["//visibility:public"],
