astore_upload: Add path_prefix bazel flag
This change adds a bazel flag that, when set, will prefix all astore
paths used by `astore_upload` rules with the specified prefix.

Tested: manually:

* normal upload:

  ```
  scott-> bazel run //flextape/server:astore_push
  # bazel output omitted
  | Created                 Creator                        Arch           MD5                              UID                              Size    TAGs
  | 2025-07-24 14:19:35.376 scott@enfabrica.net            amd64-linux    f11582e0138fe6a851ca6e40dd07d1c6 o78fvrn7kkhyvyoffuawrqemzxmt5gex 14 MB   [latest]

  scott-> enkit astore ls infra/flextape/flextape_server
  Directly downloadable
   | Created                 Creator                        Arch           MD5                              UID                              Size    TAGs
   | 2025-07-24 14:19:35.376 scott@enfabrica.net            amd64-linux    f11582e0138fe6a851ca6e40dd07d1c6 o78fvrn7kkhyvyoffuawrqemzxmt5gex 14 MB   [latest]
  ```

* modified path prefix:

  ```
  scott-> bazel run //flextape/server:astore_push --//f/astore:path_prefix=home/scott
  # bazel output omitted
  | Created                 Creator                        Arch           MD5                              UID                              Size    TAGs
  | 2025-07-24 14:25:56.947 scott@enfabrica.net            amd64-linux    f11582e0138fe6a851ca6e40dd07d1c6 zqyonoextdrfiagabep2u6gcf824xvbd 14 MB   [latest]

  scott-> enkit astore ls home/scott/infra/flextape/flextape_server
  Directly downloadable
   | Created                 Creator                        Arch           MD5                              UID                              Size    TAGs
   | 2025-07-24 14:25:56.947 scott@enfabrica.net            amd64-linux    f11582e0138fe6a851ca6e40dd07d1c6 zqyonoextdrfiagabep2u6gcf824xvbd 14 MB   [latest]
  ```

--- a/f/astore/BUILD.bazel
+++ b/f/astore/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
 load("//bazel/astore:defs.bzl", "astore_output_format", "astore_tag")
 
 astore_tag(
@@ -9,5 +10,11 @@ astore_tag(
 astore_output_format(
     name = "output_format",
     build_setting_default = "table",
+    visibility = ["//bazel/astore:__pkg__"],
+)
+
+string_flag(
+    name = "path_prefix",
+    build_setting_default = "",
     visibility = ["//bazel/astore:__pkg__"],
 )
