Switch to `aspect_rules_py` from bazel central registry

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,3 +2,5 @@
 *.sh @jonathan-enf @ccontavalli @ahungrynacho @mhallmark
 /scripts @jonathan-enf @ccontavalli @mhallmark
 allocation_manager/ @kjw-enf @ccontavalli @moksh-enf @roivanov
+
+/MODULE.bazel.lock
