--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -94,12 +94,11 @@ pip.parse(
 use_repo(pip, "enkit_pip_deps")
 
 bazel_dep(name = "aspect_rules_py", version = "1.6.1")
-
 bazel_dep(name = "protobuf", version = "enf-31.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
-bazel_dep(name = "rules_go", version = "0.55.1")
+bazel_dep(name = "rules_go", version = "0.57.0")
 bazel_dep(name = "gazelle", version = "enf-0.44.0")
 
 go_sdk = use_extension(
@@ -174,12 +173,14 @@ use_repo(
     "org_golang_google_api",
     "org_golang_google_genproto",
     "org_golang_google_genproto_googleapis_bytestream",
+    "org_golang_google_genproto_googleapis_rpc",
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
     "org_golang_x_crypto",
     "org_golang_x_exp",
     "org_golang_x_net",
     "org_golang_x_oauth2",
+    "org_golang_x_sync",
     "org_golang_x_term",
     "org_uber_go_goleak",
     "org_uber_go_zap",
