Add yaml config, url filter, some metrics, active downloads limit with deduplication in queue

--- a/experimental/remote_asset_service/asset_service/BUILD.bazel
+++ b/experimental/remote_asset_service/asset_service/BUILD.bazel
@@ -6,6 +6,9 @@ go_library(
         "asset_downloader.go",
         "asset_server.go",
         "cache_proxy.go",
+        "config.go",
+        "metrics.go",
+        "url_filter.go",
     ],
     importpath = "github.com/enfabrica/enkit/experimental/remote_asset_service/asset_service",
     visibility = ["//visibility:public"],
@@ -13,6 +16,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_google_uuid//:uuid",
+        "@in_gopkg_yaml_v2//:yaml_v2",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
         "@org_golang_google_genproto_googleapis_rpc//status",
         "@org_golang_google_grpc//:grpc",
