--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -52,6 +52,7 @@ gazelle(name = "gazelle_update_repos")
 #
 # gazelle:resolve go kythe.io/kythe/go/platform/delimited @io_kythe//kythe/go/platform/delimited
 # gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto
+# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/asset/v1 @com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto
 
 # Buildbarn gazelle resolve mappings
 # Buildbarn dependencies may need certain overrides; these mappings are copied
