--- a/experimental/remote_asset_service/asset_downloader_test_util/BUILD.bazel
+++ b/experimental/remote_asset_service/asset_downloader_test_util/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_google_uuid//:uuid",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_x_sync//errgroup",
     ],
 )
 
