--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -138,6 +138,7 @@ use_repo(
     "com_github_itchyny_gojq",
     "com_github_jackc_pgx_v5",
     "com_github_jackpal_gateway",
+    "com_github_joho_godotenv",
     "com_github_josephburnett_jd",
     "com_github_kataras_muxie",
     "com_github_kirsle_configdir",
@@ -173,12 +174,14 @@ use_repo(
     "org_golang_google_api",
     "org_golang_google_genproto",
     "org_golang_google_genproto_googleapis_bytestream",
+    "org_golang_google_genproto_googleapis_rpc",
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
     "org_golang_x_crypto",
     "org_golang_x_exp",
     "org_golang_x_net",
     "org_golang_x_oauth2",
+    "org_golang_x_sync",
     "org_golang_x_term",
     "org_uber_go_goleak",
     "org_uber_go_zap",
