--- a/experimental/remote_asset_service/BUILD.bazel
+++ b/experimental/remote_asset_service/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//experimental/remote_asset_service/asset_service",
+        "@com_github_joho_godotenv//:godotenv",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//health",
         "@org_golang_google_grpc//health/grpc_health_v1",
