--- a/experimental/remote_asset_service/asset_service/BUILD.bazel
+++ b/experimental/remote_asset_service/asset_service/BUILD.bazel
@@ -16,12 +16,14 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_google_uuid//:uuid",
-        "@in_gopkg_yaml_v2//:yaml_v2",
+        "@jsonnet_go//:go_default_library",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
         "@org_golang_google_genproto_googleapis_rpc//status",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//credentials",
         "@org_golang_google_grpc//credentials/insecure",
+        "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//status",
     ],
 )
