switch to 1.24.6 and gazelle 0.45.0 + latest metadata extractor fixes, optimizations in remote asset api service

--- a/allocation_manager/proto/BUILD.bazel
+++ b/allocation_manager/proto/BUILD.bazel
@@ -19,7 +19,7 @@ proto_library(
 
 go_proto_library(
     name = "allocation_manager_go_proto",
-    compilers = ["@rules_go//proto:go_grpc"],
+    compilers = ["@io_bazel_rules_go//proto:go_grpc_v2"],
     importpath = "github.com/enfabrica/enkit/allocation_manager/proto",
     proto = ":proto",
     visibility = ["//visibility:public"],
