--- a/experimental/remote_asset_service/asset_service/BUILD.bazel
+++ b/experimental/remote_asset_service/asset_service/BUILD.bazel
@@ -34,6 +34,7 @@ go_library(
         "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//status",
         "@org_golang_google_grpc_security_advancedtls//:advancedtls",
+        "@org_golang_google_protobuf//proto",
     ],
 )
 
