--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -99,7 +99,9 @@ bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
 bazel_dep(name = "rules_go", version = "0.57.0")
-bazel_dep(name = "gazelle", version = "enf-0.44.0")
+bazel_dep(name = "gazelle", version = "enf-0.45.0")
+bazel_dep(name = "aspect_rules_js", version = "2.5.0")
+bazel_dep(name = "opentelemetry-proto", version = "1.7.0")
 
 go_sdk = use_extension(
     "@rules_go//go:extensions.bzl",
@@ -195,12 +197,23 @@ inject_repo(
     go_deps,
     bazel_remote_apis = "com_github_bazelbuild_remote_apis",
     dev_cel_expr = "cel-spec",
-    googleapis = "googleapis",
-    grpc = "grpc",
-    jsonnet_go = "jsonnet_go",
-    protobuf = "protobuf",
-    rules_go = "rules_go",
-    xds = "xds",
+)
+
+inject_repo(
+    go_deps,
+    "rules_oci",
+    "rules_pkg",
+    "rules_go",
+    "gazelle",
+    "rules_jsonnet",
+    "googleapis",
+    "grpc",
+    "jsonnet_go",
+    "protobuf",
+    "xds",
+    "opentelemetry-proto",
+    "aspect_rules_js",
+    "aspect_bazel_lib",
 )
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
