--- a/enkit/proto/BUILD.bazel
+++ b/enkit/proto/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_go//go:def.bzl", "go_library")
 load("@rules_go//proto:def.bzl", "go_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
@@ -9,9 +10,9 @@ proto_library(
 
 go_proto_library(
     name = "presubmit_go_proto",
-    compilers = ["@rules_go//proto:go_grpc"],
-    importpath = "github.com/enfabrica/enkit/proto",
+    importpath = "github.com/enfabrica/enkit/enkit/proto",
     proto = ":presubmit_proto",
+    visibility = ["//visibility:public"],
 )
 
 go_proto_library(
@@ -23,6 +24,13 @@ go_proto_library(
 
 alias(
     name = "go_default_library",
-    actual = ":presubmit_proto",
+    actual = ":proto",
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "proto",
+    embed = [":presubmit_go_proto"],
+    importpath = "github.com/enfabrica/enkit/enkit/proto",
     visibility = ["//visibility:public"],
 )
