--- a/infra/postsubmit/proto/BUILD.bazel
+++ b/infra/postsubmit/proto/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
+load("@rules_go//go:def.bzl", "go_library")
 load("@rules_go//proto:def.bzl", "go_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
@@ -23,6 +24,13 @@ go_proto_library(
 
 alias(
     name = "go_default_library",
-    actual = ":postsubmit_proto",
+    actual = ":proto",
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "proto",
+    embed = [":postsubmit_go_proto"],
+    importpath = "github.com/enfabrica/enkit/infra/postsubmit/proto",
     visibility = ["//visibility:public"],
 )
