--- a/lib/client/commands/BUILD.bazel
+++ b/lib/client/commands/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/client/commands",
     visibility = ["//visibility:public"],
     deps = [
-        "//auth/proto:go_default_library",
+        "//auth/proto",
         "//lib/client",
         "//lib/config/identity",
         "//lib/kauth",
